# tado

./: .gitignore  AGENTS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Package.resolved  Package.swift  README.md  REWRITE.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: swift.yml
.tado/: .gitignore  README.md  config.json
.tado/eternal/: metrics.jsonl  progress.md
.tado/eternal/trials/: sprint-1.json  sprint-1.md  sprint-2.json  sprint-2.md
.tado/kanban/: state.json
Sources/CTadoCore/: shim.c
Sources/CTadoCore/include/: module.modulemap  tado_core.h
Sources/Tado/App/: AppState.swift  TadoApp.swift  WindowZoomScaler.swift  WindowZoomState.swift
Sources/Tado/Core/: SpawnSignposts.swift  TadoCore.swift
Sources/Tado/Design/: DesignKit.swift  EditorialCard.swift  Palette.swift  RelayBrandDot.swift  RelayButton.swift  RelayCard.swift  RelayFocus.swift  RelayHairlineLoader.swift  RelayInlineLink.swift  RelayKbdPill.swift  RelayKicker.swift  RelayMotion.swift  RelayPage.swift  (+10 more)
Sources/TadoUseBridge/: main.swift
Tests/TadoCoreTests/: AgentViewControlTests.swift  DiffEngineTests.swift  DispatchChainWatchdogTests.swift  DomeAppStateTests.swift  EternalPerfModelTests.swift  EventLedgerTests.swift  KnowledgeRetrievalTests.swift  LensParityTests.swift  MetalRendererTests.swift  PetsTests.swift  PolishTests.swift  RendererBenchTests.swift  SearchSurfaceHarnessTests.swift  SelectionTests.swift  SpawnDiagnosticsTests.swift  StorageAndModelTests.swift  TadoCoreTests.swift  TileVisibilityTests.swift  TodoCommandDetectorTests.swift  TogetherLensTests.swift
assets/: README.md  x-thread-v1.md
bench/: 100-tile-stress.sh  BENCH.md  PERF_KNOBS.md
docs/: dome-note-reliability.md  persistence-and-notifications.md  roadmap-feature-migrations.md  roadmap-foundation-v2.md  roadmap-shared-dome-notes.md
npm/tado/: README.md  package.json
tado-core/: Cargo.toml  build.rs
tado-core/.cargo/: config.toml
tado-core/benches/: grid_bench.rs
tado-core/crates/bt-core/: Cargo.toml
tado-core/crates/bt-core/recipes/: architecture-review.md  completion-claim.md  team-handoff.md
tado-core/crates/bt-core/src/: automation.rs  config.rs  db.rs  error.rs  fs_guard.rs  lib.rs  migrations.rs  model.rs  rpc.rs  service.rs  zombie.rs
tado-core/crates/bt-core/src/code/: chunker.rs  indexer.rs  language.rs  mod.rs  search.rs  store.rs  walker.rs  watcher.rs
tado-core/crates/bt-core/src/context/: mod.rs  relative.rs  spawn_pack.rs
tado-core/crates/bt-core/src/enrichment/: decayer.rs  deduper.rs  extractor.rs  linker.rs  mod.rs  worker.rs
tado-core/crates/bt-core/src/notes/: chunker.rs  embeddings.rs  mod.rs  model_fetch.rs  qwen3_model.rs  qwen3_runtime.rs  search.rs  store.rs  tokenizer.rs
tado-core/crates/bt-core/src/recipes/: mod.rs  runner.rs  template.rs
tado-core/crates/bt-core/tests/: code_index_e2e.rs  ingest_scope_contract.rs  spawn_pack_byte_equiv.rs
tado-core/crates/dome-eval/: Cargo.toml
tado-core/crates/dome-eval/src/: corpus.rs  lib.rs  main.rs  replay.rs
tado-core/crates/dome-eval/tests/: baseline_corpus.rs
tado-core/crates/dome-eval/tests/corpus/: baseline.yaml
tado-core/crates/dome-mcp/: Cargo.toml
tado-core/crates/dome-mcp/src/: main.rs
tado-core/crates/perf-suite/: Cargo.toml
tado-core/crates/perf-suite/benches/: self_bench.rs
tado-core/crates/perf-suite/fixtures/go/: go.mod  main.go
tado-core/crates/perf-suite/fixtures/node/: index.ts  package.json
tado-core/crates/perf-suite/fixtures/polyglot/: Cargo.toml
tado-core/crates/perf-suite/fixtures/python/: app.py  pyproject.toml
tado-core/crates/perf-suite/fixtures/rust/: Cargo.toml
tado-core/crates/perf-suite/fixtures/rust/src/: main.rs
tado-core/crates/perf-suite/fixtures/swift/: Package.swift
tado-core/crates/perf-suite/fixtures/swift/Sources/swift/: Bridge.swift
tado-core/crates/perf-suite/src/: baseline.rs  lib.rs  main.rs  proposal.rs  report.rs  runtime.rs  scoring.rs
tado-core/crates/perf-suite/src/adapters/: go.rs  mod.rs  node.rs  polyglot.rs  python.rs  rust.rs  swift.rs
tado-core/crates/perf-suite/src/metrics/: algo_complexity.rs  alloc_per_op.rs  cold_start_ops.rs  critical_path_ops.rs  db_query_cost.rs  io_syscalls_per_op.rs  mod.rs  steady_state_rss_ratio.rs  xproc_roundtrips.rs
tado-core/crates/perf-suite/tests/: end_to_end.rs  fixture_adapters.rs  runtime_smoke.rs
tado-core/crates/sprint-suite/: Cargo.toml  INTEGRATION.md
tado-core/crates/sprint-suite/src/: baseline.rs  lib.rs  main.rs  report.rs  scoring.rs
tado-core/crates/tado-cli/: Cargo.toml
tado-core/crates/tado-cli/src/: control_client.rs  disk.rs  lib.rs  output.rs  tui.rs
tado-core/crates/tado-cowork-plugin/.claude-plugin/: marketplace.json  plugin.json
tado-core/crates/tado-cowork-plugin/agents/: cowork-canvas-coworker.md
tado-core/crates/tado-cowork-plugin/skills/cowork-tado-tools/: SKILL.md
tado-core/crates/tado-dome/: Cargo.toml
tado-core/crates/tado-dome/src/: main.rs
tado-core/crates/tado-eternal-state/: Cargo.toml
tado-core/crates/tado-eternal-state/src/: ffi.rs  lib.rs
tado-core/crates/tado-ipc/: Cargo.toml
tado-core/crates/tado-ipc/src/: events_socket.rs  lib.rs  message.rs  outbound.rs  paths.rs  registry.rs
tado-core/crates/tado-ipc/tests/: events_socket_integration.rs
tado-core/crates/tado-mcp/: Cargo.toml
tado-core/crates/tado-mcp/src/: main.rs
tado-core/crates/tado-settings/: Cargo.toml
tado-core/crates/tado-settings/src/: atomic.rs  lib.rs  paths.rs  scope.rs
tado-core/crates/tado-shared/: Cargo.toml
tado-core/crates/tado-shared/src/: lib.rs
tado-core/crates/tado-terminal/: Cargo.toml  build.rs
tado-core/crates/tado-terminal/src/: composition.rs  dome_ffi.rs  eternal_state_ffi.rs  ffi.rs  grid.rs  lib.rs  performer.rs  pty.rs  session.rs  sibling_ffi.rs
tado-core/src/: ffi.rs  grid.rs  lib.rs  performer.rs  pty.rs  session.rs
tado-mcp/: package-lock.json  package.json
tado-mcp/src/: index.ts  paths.ts
(+207 files in other folders)
