[package]
name = "tado-core"
version = "0.1.0"
edition = "2021"
publish = false
description = "Tado terminal core: PTY, VT parsing, IPC. Linked into the Swift app as a static library."

[lib]
name = "tado_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
portable-pty = "0.9"
vte = "0.13"
parking_lot = "0.12"
crossbeam-channel = "0.5"
# East-Asian Wide character classification. Used by `Grid::put_char`
# to know when a codepoint should occupy two terminal cells (CJK,
# box-drawing wide variants, etc.). Stable since 0.1.
unicode-width = "0.2"

[build-dependencies]
cbindgen = "0.28"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
