#
# Tado's Rust workspace.
#
# Shape:
#   crates/tado-terminal — the PTY, VT parser, and cell grid that
#                          drive the terminal emulator. Compiles to a
#                          `staticlib` (+ rlib) named `tado_core`;
#                          `Package.swift` links against
#                          `tado-core/target/release/libtado_core.a`.
#   crates/tado-shared   — reusable FFI + error + id helpers. Empty
#                          on workspace creation; fills in as future
#                          crates (tado-ipc, tado-settings,
#                          tado-extensions) pull common primitives
#                          out of tado-terminal.
#
# Release profile lives at the workspace level so every member crate
# inherits identical LTO / codegen-units / strip settings — the
# Swift app ships one static library; every member that contributes
# to it must build with the same codegen rules.
#
# Adding a new crate: create `crates/<name>/{Cargo.toml,src/lib.rs}`,
# append `"crates/<name>"` to `members` below. `cargo build --release`
# from `tado-core/` still drops `libtado_core.a` into
# `tado-core/target/release/` (it's a workspace-wide target dir).
#

[workspace]
members = [
    "crates/tado-terminal",
    "crates/tado-shared",
    "crates/tado-ipc",
    "crates/tado-settings",
    "crates/bt-core",
    "crates/dome-mcp",
    "crates/tado-mcp",
    "crates/tado-dome",
    "crates/dome-eval",
]
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
